--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -41,6 +41,7 @@ jobs:
         run: |
           R -e 'install.packages("renv")'
           R -e 'renv::restore()'
+          R -e 'install.packages(c("hrbrthemes", "tidyverse", "WaterML", "patchwork", "smwrBase", "lubridate", "colorspace", "gghighlight", "nls.multistart", "nlstools"))
 
       - name: Build site
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
